--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "typeorm": "^0.2.32",
     "typescript": "^4.2.3",
     "uuid": "^8.3.2",
+    "uuid-v4": "^0.1.0",
     "validator": "^13.5.2"
   },
   "devDependencies": {
